# NSFExercise

./: algorithm1.m  getX.m  main.m  notes.docx  processExercise.m  readObj.m
PSMIOC/: BasisFnc.m  BasisFncE.m  BasisObjFnc.m  BasisObjFncE.m  ConstTargetFnc.m  PSM.m  PSMMain.m  RadialBasisValueTest.m  chunkDemos.m  d_dt.m  getDemos.m  getH.m  getV.m  getV2.m  loadData.m
PSMIOC/V/: forwardRaise_V_up.mat  internalExternalRotation_V_up.mat  lateralRaise_V_up.mat  shoulderPress_V_up.mat
PSMIOC/inds/: forwardRaise_1_down_R0.mat  forwardRaise_1_up_R0.mat  forwardRaise_2_down_R0.mat  forwardRaise_2_up.mat  forwardRaise_3_down_R0.mat  forwardRaise_3_up_R0.mat  forwardRaise_4_down_R0.mat  forwardRaise_4_up_R0.mat  (+28 more)
cpp/: CMakeLists.txt
cpp/cmake/: FindMatlab.cmake
cpp/objLoaderMex/: CMakeLists.txt
cpp/processTextMex/: CMakeLists.txt  process_txt.cpp  process_txtCPP.cpp
cpp/robotMex/: CMakeLists.txt
demonstrations/: forwardRaise_L0_0.mat  forwardRaise_L0_1.mat  forwardRaise_L0_2.mat  forwardRaise_L0_3.mat  forwardRaise_R0_0.mat  forwardRaise_R0_1.mat  forwardRaise_R0_2.mat  forwardRaise_R0_3.mat  internalExternalRotation_L0_0.mat  internalExternalRotation_L0_1.mat  internalExternalRotation_L0_2.mat  internalExternalRotation_L0_3.mat  internalExternalRotation_R0_0.mat  internalExternalRotation_R0_1.mat  internalExternalRotation_R0_2.mat  internalExternalRotation_R0_3.mat  lateralRaise_L0_0.mat  lateralRaise_L0_1.mat  lateralRaise_L0_2.mat  lateralRaise_L0_3.mat  lateralRaise_R0_0.mat  lateralRaise_R0_1.mat  lateralRaise_R0_2.mat  lateralRaise_R0_3.mat  shoulderPress_L0_0.mat  shoulderPress_L0_1.mat  shoulderPress_L0_2.mat  shoulderPress_L0_3.mat  shoulderPress_R0_0.mat  shoulderPress_R0_1.mat  shoulderPress_R0_2.mat  shoulderPress_R0_3.mat
utilities/: Utils.m
yumiMatlab/: Robot.m  obj.mat
yumi_ws/: .gitignore  runReal.bat  runSim.bat
(+149 files in other folders)
